--- a/Atividades/Exercícios/1/Exer1/index.html
+++ b/Atividades/Exercícios/1/Exer1/index.html
@@ -8,8 +8,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button id="olaMundo" onclick="olaMundo()">Ola Mundo</button>
-    <button id="mostraNome" onclick="mostraNome()">Mostra nome</button>
-    <button id="concatenarpalavras" onclick="concatenaPalavras()">Juntar palavras</button>
+    <div class="corpo">
+        <div class="first">
+        <h2>Primeira função</h2>
+        <button id="olaMundo" onclick="olaMundo()">Olá Mundo</button>
+        </div>
+        <div class="second">
+        <h2>Segunda função</h2>
+        <p>*Olhar no console</p>
+        <button id="mostraNome" onclick="mostraNome()">Mostra nome</button>
+        </div>
+        <div class="third">
+        <h2>Terceira função</h2>
+        <p>*Olhar no console</p>
+        <button id="concatenarpalavras" onclick="concatenaPalavras()">Juntar palavras</button>
+        </div>
+    </div>
 </body>
+
 </html>
