--- a/Atividades/Exercícios/1/Exer2/index.html
+++ b/Atividades/Exercícios/1/Exer2/index.html
@@ -8,8 +8,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button onclick="somaNumeros()">Soma</button>
-    <button onclick="subtraiNumeros(n1,n2)">Subtrair</button>
-    <button onclick="criarObjeto()">Objeto</button>
+    <div class="corpo">
+        <div class="first">
+            <h2>Primeira função</h2>
+            <p>*Olhar no console</p>
+            <button onclick="somaNumeros()">Soma</button>
+        </div>
+        <div class="second">
+            <h2>Segunda função</h2>
+            <p>*Olhar no console</p>
+        <button onclick="subtraiNumeros(n1,n2)">Subtrair</button>
+        </div>
+        <div class="third">
+            <h2>Terceira função</h2>
+            <p>*Olhar no console</p>
+            <button onclick="criarObjeto()">Objeto</button>
+        </div>
+    </div>
 </body>
 </html>
