--- a/Atividades/Exercícios/1/Exer3/index.html
+++ b/Atividades/Exercícios/1/Exer3/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button onclick="calculadora()">Operação</button>
+    <div class="Calculadora">
+    <h2>Calculadora</h2>
+    <p>*Em operações digite: Soma, Subtração, Multiplicação ou Divisão</p>
+    <button onclick="Calculadora()">Operações</button>
+    </div>
 </body>
 </html>
